--- a/index.html
+++ b/index.html
@@ -2321,7 +2321,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Welcome to the Site!</h2></p>
 <p><span style="color: rgb(168, 50, 50);"><strong>The website is still work in progress in terms of writing, content, and subjects covered</strong></span>. </p>
-<p>The chapters included so far can be found <a href="/julia_book/list_posts/">here</a>, with a pdf version <a href="https://alfaromartino.github.io/julia_book/assets/pdf/juliaBook_Alfaro.pdf">here</a>. I&#39;ll continue adding new content as I go. </p>
+<p>The chapters included so far can be found <a href="/julia_book/list_posts/">here</a> and a pdf version <a href="https://alfaromartino.github.io/julia_book/assets/pdf/juliaBook_Alfaro.pdf">here</a>. I&#39;ll continue adding new content as I go. </p>
 <p>If you find any mistakes, typos, or have any suggestions, please open an issue on the <a href="https://github.com/alfaromartino/julia_book/issues">book&#39;s GitHub page</a>. Your feedback is greatly appreciated&#33;</p>
 <p>      </div>
     </div>
@@ -2332,8 +2332,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Why Julia?</h2></p>
-<p>Scientific computing demands both an intuitive design and execution speed. Julia is built to deliver both. </p>
- <div class="bullets_nomarker">
+<p>Scientific computing demands both an intuitive design and execution speed. Julia is built to deliver both. <br/></p>
+ <div style="line-height:2.2em;">
 <ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong><span style="text-decoration: underline">SIMPLE AND EXPRESSIVE</span></strong></span>: Julia’s syntax is concise and close to mathematical notation, so you can translate models into readable code that&#39;s easy to maintain.</p>
 </li>
