--- a/index.html
+++ b/index.html
@@ -2333,7 +2333,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Why Julia?</h2></p>
 <p>Scientific computing demands both an intuitive design and execution speed. Julia is built to deliver both. <br/></p>
- <div style="line-height:2.2em;">
+ <div class="itemNormalSpace" style="line-height:2.2em;">
 <ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong><span style="text-decoration: underline">SIMPLE AND EXPRESSIVE</span></strong></span>: Julia’s syntax is concise and close to mathematical notation, so you can translate models into readable code that&#39;s easy to maintain.</p>
 </li>
